objects/Picklist_Value__c.object
<CustomObject>
    <fields>
        <fullName>Behavior_Category__c</fullName>
        <label>Behavior Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Behavior_Incident_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Non-compliant / Not Prepared</fullName>
                </value>
                <value>
                    <fullName>Not In Class or With Group / Truancy</fullName>
                </value>
                <value>
                    <fullName>Misusing Materials / Damaging Property</fullName>
                </value>
                <value>
                    <fullName>Inappropriate Contact / Unsafe Behavior</fullName>
                </value>
                <value>
                    <fullName>Lying / Cheating / Stealing</fullName>
                </value>
                <value>
                    <fullName>Disruptive / Disrespectful</fullName>
                </value>
                <value>
                    <fullName>Bullying / Threatening / Planning Harm</fullName>
                </value>
                <value>
                    <fullName>Fighting</fullName>
                </value>
                <value>
                    <fullName>Having / Using Potential or Real Weapon</fullName>
                </value>
                <value>
                    <fullName>Drugs / Alcohol</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Positive #1</fullName>
                </value>
                <value>
                    <fullName>Positive #2</fullName>
                </value>
                <value>
                    <fullName>Neutral #1</fullName>
                </value>
                <value>
                    <fullName>Neutral #2</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Positive Behaviors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavior_Incident_Level__c</fullName>
        <label>Behavior Incident Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absent</fullName>
                </value>
                <value>
                    <fullName>Reporting Period</fullName>
                </value>
                <value>
                    <fullName>Custom Period</fullName>
                </value>
                <value>
                    <fullName>In School Suspension</fullName>
                </value>
                <value>
                    <fullName>Out of School Suspension</fullName>
                </value>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Tardy</fullName>
                </value>
                <value>
                    <fullName>Excused Absence</fullName>
                </value>
                <value>
                    <fullName>Unexcused Absence</fullName>
                </value>
                <value>
                    <fullName>Excused Tardy</fullName>
                </value>
                <value>
                    <fullName>Unexcused Tardy</fullName>
                </value>
                <value>
                    <fullName>Missing</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Late</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Standards</fullName>
                </value>
                <value>
                    <fullName>Credit/No Credit</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
                <value>
                    <fullName>0-100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consequence_Weight__c</fullName>
        <label>Consequence Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corresponding_Value__c</fullName>
        <description>Used for Behavior values to relate a time value to the consequence type.</description>
        <label>Corresponding Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Points__c</fullName>
        <label>Default Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Code__c</fullName>
        <label>Display Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fieldset__c</fullName>
        <label>Field Set</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>UN Ungraded</fullName>
                </value>
                <value>
                    <fullName>PK-3</fullName>
                </value>
                <value>
                    <fullName>PK-4</fullName>
                </value>
                <value>
                    <fullName>PK Pre-K</fullName>
                </value>
                <value>
                    <fullName>Kindergarten/Preschool</fullName>
                </value>
                <value>
                    <fullName>KG Kindergarten</fullName>
                </value>
                <value>
                    <fullName>PG Postgraduate/Adult</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Involves_Weapon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incident Involves Weapon?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicator_Area__c</fullName>
        <label>Indicator Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Indicator_Area_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Code__c</fullName>
        <label>Internal Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sf_tardy</fullName>
                </value>
                <value>
                    <fullName>sf_absent</fullName>
                </value>
                <value>
                    <fullName>sf_suspended</fullName>
                </value>
                <value>
                    <fullName>sf_present</fullName>
                </value>
                <value>
                    <fullName>sf_departed</fullName>
                </value>
                <value>
                    <fullName>sf_complete</fullName>
                </value>
                <value>
                    <fullName>sf_missing</fullName>
                </value>
                <value>
                    <fullName>sf_incomplete</fullName>
                </value>
                <value>
                    <fullName>sf_absentwdue</fullName>
                </value>
                <value>
                    <fullName>sf_exempt</fullName>
                </value>
                <value>
                    <fullName>sf_suspension</fullName>
                </value>
                <value>
                    <fullName>sf_tardydeparted</fullName>
                </value>
                <value>
                    <fullName>sf_late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Early_Departure__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>does this picklist value represent an Early Departure attendance status?</inlineHelpText>
        <label>Is Early Departure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suspension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the consequence a suspension?</description>
        <inlineHelpText>Is the consequence a suspension?</inlineHelpText>
        <label>Is Suspension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tardy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>does this picklist value represent a Tardy attendance status?</inlineHelpText>
        <label>Is Tardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Unexcused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the attendance value falls under the Excused/Unexcused category</description>
        <label>Is Unexcused</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <inlineHelpText>To explain when this values is used...</inlineHelpText>
        <label>Long Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should an admin be notified?</description>
        <inlineHelpText>Should an admin be notified?</inlineHelpText>
        <label>Notify Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>99</defaultValue>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_as_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set this check box for the default value for Attendance (usually Present)</inlineHelpText>
        <label>Set as Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Picklist Values</relationshipLabel>
        <relationshipName>Picklist_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_On_Report_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Report Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_On_Transcript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Scale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the scale is to be used in &apos;grading&apos; the assignment as a standard</description>
        <label>Standard Scale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Grade Scale</fullName>
                </value>
                <value>
                    <fullName>Homework</fullName>
                </value>
                <value>
                    <fullName>Behavior Type</fullName>
                </value>
                <value>
                    <fullName>Behavior Consequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_character_salesforce_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 character salesforce ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_over_year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year over year?</label>
        <type>Checkbox</type>
    </fields>
    <label>Picklist Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Fieldset__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Display_Code__c</columns>
        <columns>Internal_Code__c</columns>
        <columns>Level__c</columns>
        <columns>Long_Description__c</columns>
        <columns>Number__c</columns>
        <columns>Order__c</columns>
        <columns>Set_as_Default__c</columns>
        <columns>Setup__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Corresponding_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assessment_Types</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Indicator_Area__c</columns>
        <columns>NAME</columns>
        <columns>Fieldset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Assessment_Type</value>
        </filters>
        <label>Assessment Types</label>
    </listViews>
    <listViews>
        <fullName>Assessment_wo_Templates</fullName>
        <columns>NAME</columns>
        <columns>Fieldset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Assessment_wo_Template</value>
        </filters>
        <label>Assessment wo Templates</label>
    </listViews>
    <listViews>
        <fullName>Assignment_Types</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Setup__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Assignment_Type</value>
        </filters>
        <label>Assignment Types</label>
    </listViews>
    <listViews>
        <fullName>Attendance</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Display_Code__c</columns>
        <columns>Setup__c</columns>
        <columns>Set_as_Default__c</columns>
        <columns>Is_Early_Departure__c</columns>
        <columns>Is_Tardy__c</columns>
        <columns>Is_Unexcused__c</columns>
        <columns>Is_Suspension__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Attendance</value>
        </filters>
        <label>Attendance</label>
    </listViews>
    <listViews>
        <fullName>Behavior</fullName>
        <columns>NAME</columns>
        <columns>Behavior_Category__c</columns>
        <columns>Behavior_Incident_Level__c</columns>
        <columns>Incident_Involves_Weapon__c</columns>
        <columns>Setup__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Category__c</columns>
        <columns>Consequence_Weight__c</columns>
        <columns>Corresponding_Value__c</columns>
        <columns>Display_Code__c</columns>
        <columns>External_Id__c</columns>
        <columns>Fieldset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Behavior_Consequence,Picklist_Value__c.Behavior_Type</value>
        </filters>
        <label>Behavior</label>
    </listViews>
    <listViews>
        <fullName>Grade_Scale</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Display_Code__c</columns>
        <columns>Category__c</columns>
        <columns>Type__c</columns>
        <columns>Setup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Grade_Scale</value>
        </filters>
        <label>Grade Scale</label>
    </listViews>
    <listViews>
        <fullName>Master</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Corresponding_Value__c</columns>
        <columns>Internal_Code__c</columns>
        <columns>Level__c</columns>
        <columns>Long_Description__c</columns>
        <columns>Number__c</columns>
        <columns>Order__c</columns>
        <columns>Set_as_Default__c</columns>
        <columns>Setup__c</columns>
        <columns>Short_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Setup__c</field>
            <operation>equals</operation>
        </filters>
        <label>Master</label>
    </listViews>
    <listViews>
        <fullName>Math_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Fieldset__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>- Math</value>
        </filters>
        <label>Math Assessments</label>
    </listViews>
    <listViews>
        <fullName>Points_Categories</fullName>
        <columns>NAME</columns>
        <columns>Grade__c</columns>
        <columns>Setup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Points_Category</value>
        </filters>
        <label>Points Categories</label>
    </listViews>
    <listViews>
        <fullName>Time</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Corresponding_Value__c</columns>
        <columns>Setup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Picklist_Value__c.Time</value>
        </filters>
        <label>Time</label>
    </listViews>
    <nameField>
        <label>Display Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Values</pluralLabel>
    <recordTypes>
        <fullName>Assessment_Type</fullName>
        <active>true</active>
        <description>Assessments given by the school.</description>
        <label>Assessment Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assessment_wo_Template</fullName>
        <active>true</active>
        <description>assessments that dont have templates</description>
        <label>Assessment wo Template</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assignment_Assessment_Type</fullName>
        <active>true</active>
        <description>This is a record type for assignments to be labeled as an assessment</description>
        <label>Assignment Assessment Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assignment_Type</fullName>
        <active>true</active>
        <label>Assignment Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Attendance</fullName>
        <active>true</active>
        <label>Attendance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Behavior_Consequence</fullName>
        <active>true</active>
        <label>Behavior Consequence</label>
    </recordTypes>
    <recordTypes>
        <fullName>Behavior_Type</fullName>
        <active>true</active>
        <label>Behavior Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grade_Scale</fullName>
        <active>true</active>
        <label>Grade Scale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Homework</fullName>
        <active>true</active>
        <description>Record Type for Homework Status Values</description>
        <label>Homework</label>
    </recordTypes>
    <recordTypes>
        <fullName>Homework_Tracking</fullName>
        <active>false</active>
        <label>Homework Tracking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Points_Category</fullName>
        <active>true</active>
        <label>Points Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>SPED</fullName>
        <active>true</active>
        <label>SPED</label>
    </recordTypes>
    <recordTypes>
        <fullName>Time</fullName>
        <active>true</active>
        <label>Time</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>