objects/Picklist_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Fieldset__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Display_Code__c</columns>
    <columns>Internal_Code__c</columns>
    <columns>Level__c</columns>
    <columns>Long_Description__c</columns>
    <columns>Number__c</columns>
    <columns>Order__c</columns>
    <columns>Set_as_Default__c</columns>
    <columns>Setup__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Corresponding_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>