objects/Picklist_Value__c/listViews/Assessment_Types.listView-meta.xml
<ListView>
    <fullName>Assessment_Types</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Indicator_Area__c</columns>
    <columns>NAME</columns>
    <columns>Fieldset__c</columns>
    <columns>X18_character_salesforce_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Picklist_Value__c.Assessment_Type</value>
    </filters>
    <label>Assessment Types</label>
</ListView>