objects/Picklist_Value__c/listViews/Assessment_wo_Templates.listView-meta.xml
<ListView>
    <fullName>Assessment_wo_Templates</fullName>
    <columns>NAME</columns>
    <columns>Fieldset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Picklist_Value__c.Assessment_wo_Template</value>
    </filters>
    <label>Assessment wo Templates</label>
</ListView>