objects/Picklist_Value__c/listViews/Assignment_Types.listView-meta.xml
<ListView>
    <fullName>Assignment_Types</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Setup__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Picklist_Value__c.Assignment_Type</value>
    </filters>
    <label>Assignment Types</label>
</ListView>