objects/Picklist_Value__c/listViews/Behavior.listView-meta.xml
<ListView>
    <fullName>Behavior</fullName>
    <columns>NAME</columns>
    <columns>Behavior_Category__c</columns>
    <columns>Behavior_Incident_Level__c</columns>
    <columns>Incident_Involves_Weapon__c</columns>
    <columns>Setup__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Category__c</columns>
    <columns>Consequence_Weight__c</columns>
    <columns>Corresponding_Value__c</columns>
    <columns>Display_Code__c</columns>
    <columns>External_Id__c</columns>
    <columns>Fieldset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Picklist_Value__c.Behavior_Consequence,Picklist_Value__c.Behavior_Type</value>
    </filters>
    <label>Behavior</label>
</ListView>