objects/Picklist_Value__c/listViews/Grade_Scale.listView-meta.xml
<ListView>
    <fullName>Grade_Scale</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Display_Code__c</columns>
    <columns>Category__c</columns>
    <columns>Type__c</columns>
    <columns>Setup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Picklist_Value__c.Grade_Scale</value>
    </filters>
    <label>Grade Scale</label>
</ListView>