objects/Picklist_Value__c/listViews/Master.listView-meta.xml
<ListView>
    <fullName>Master</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Corresponding_Value__c</columns>
    <columns>Internal_Code__c</columns>
    <columns>Level__c</columns>
    <columns>Long_Description__c</columns>
    <columns>Number__c</columns>
    <columns>Order__c</columns>
    <columns>Set_as_Default__c</columns>
    <columns>Setup__c</columns>
    <columns>Short_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Setup__c</field>
        <operation>equals</operation>
    </filters>
    <label>Master</label>
</ListView>