objects/Picklist_Value__c/listViews/Math_Assessments.listView-meta.xml
<ListView>
    <fullName>Math_Assessments</fullName>
    <columns>NAME</columns>
    <columns>Fieldset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>- Math</value>
    </filters>
    <label>Math Assessments</label>
</ListView>