objects/Picklist_Value__c/listViews/Points_Categories.listView-meta.xml
<ListView>
    <fullName>Points_Categories</fullName>
    <columns>NAME</columns>
    <columns>Grade__c</columns>
    <columns>Setup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Picklist_Value__c.Points_Category</value>
    </filters>
    <label>Points Categories</label>
</ListView>