objects/Picklist_Value__c/listViews/Time.listView-meta.xml
<ListView>
    <fullName>Time</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Corresponding_Value__c</columns>
    <columns>Setup__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Picklist_Value__c.Time</value>
    </filters>
    <label>Time</label>
</ListView>